--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -8,6 +8,11 @@
 @import "woocommerce/layout";
 
 /*--------------------------------------------------------------
+# WooCommerce Buttons
+--------------------------------------------------------------*/
+@import "woocommerce/buttons";
+
+/*--------------------------------------------------------------
 # WooCommerce Archive
 --------------------------------------------------------------*/
 @import "woocommerce/archive";
