--- a/style.css
+++ b/style.css
@@ -473,7 +473,12 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
-.woocommerce #respond input#submit {
+.woocommerce #respond input#submit,
+.woocommerce a.button,
+.woocommerce button.button,
+.woocommerce #page #infinite-handle span button, #page #infinite-handle span
+.woocommerce button,
+.woocommerce input.button {
   background: #fff;
   border: 2px solid;
   border-color: #ebebeb;
@@ -483,11 +488,9 @@ input[type="submit"],
   font-size: 13.8656px;
   font-size: 0.8666rem;
   line-height: 1;
-  letter-spacing: .1em;
+  letter-spacing: 1.5px;
   outline-style: none;
   padding: 1em 1.923em;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
   transition: 0.3s;
   text-decoration: none;
   text-transform: uppercase; }
@@ -496,7 +499,12 @@ input[type="submit"],
   input[type="button"]:hover,
   input[type="reset"]:hover,
   input[type="submit"]:hover,
-  .woocommerce #respond input#submit:hover {
+  .woocommerce #respond input#submit:hover,
+  .woocommerce a.button:hover,
+  .woocommerce button.button:hover,
+  .woocommerce #page #infinite-handle span button:hover, #page #infinite-handle span
+  .woocommerce button:hover,
+  .woocommerce input.button:hover {
     background: #fff;
     border-color: #24c48a;
     color: #24c48a; }
@@ -510,7 +518,17 @@ input[type="submit"],
   input[type="submit"]:active,
   input[type="submit"]:focus,
   .woocommerce #respond input#submit:active,
-  .woocommerce #respond input#submit:focus {
+  .woocommerce #respond input#submit:focus,
+  .woocommerce a.button:active,
+  .woocommerce a.button:focus,
+  .woocommerce button.button:active,
+  .woocommerce #page #infinite-handle span button:active, #page #infinite-handle span
+  .woocommerce button:active,
+  .woocommerce button.button:focus,
+  .woocommerce #page #infinite-handle span button:focus, #page #infinite-handle span
+  .woocommerce button:focus,
+  .woocommerce input.button:active,
+  .woocommerce input.button:focus {
     border-color: #24c48a;
     color: #24c48a; }
 
