WooCommerce cart page style tweaks

--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -91,6 +91,14 @@
 					font-weight: 700;
 					text-decoration: none;
 				}
+
+				.variation {
+					color: $color__text-medium;
+				}
+
+				dd {
+					margin: 0;
+				}
 			}
 
 			.product-price {
@@ -144,8 +152,8 @@
 					padding: 0;
 					
 					&:hover {
-						background: darken( #f9f9f9, 20%);
-						color: $color__text-medium;
+						background: $color__text-medium;
+						color: #fff;
 					}
 				}
 
@@ -220,14 +228,15 @@
 	}
 }
 
-.cart-collaterals {
+.woocommerce .cart-collaterals {
 
 	.cart_totals {
 		float: none;
 		width: 100%;
 		
 		h2 {
-			font-size: 24px; 
+			font-size: 24px;
+			margin-bottom: 5px;
 		}
 
 		table {
@@ -239,15 +248,18 @@
 					border-top-width: 0;
 					border-bottom: 1px solid $color__background-hr;
 					color: $color__text-dark;
-					font-size: 14px; 
-					padding-left: 0;
+					font-size: 14px;
+					line-height: 1;
+					margin: 0;
+					padding: 20px 0 18px;
 					width: 150px;
 				}
 
 				td {
 					border-top-width: 0;
 					border-bottom: 1px solid $color__background-hr;
-    				padding: 9px 0 9px 12px;
+					line-height: 1;
+    				padding: 20px 0 18px;
 					text-align: right;
 				}
 
@@ -292,6 +304,7 @@
 	}
 
 	.wc-proceed-to-checkout {
+		padding: 24px 0;
 
 		a.checkout-button {
 			float: right;
